--- a/frontend/src/app/layouts/admin-layout/widget/widget.component.html
+++ b/frontend/src/app/layouts/admin-layout/widget/widget.component.html
@@ -4,7 +4,7 @@
    <mat-card-subtitle>copy and put it into your website
    </mat-card-subtitle>
    <mat-card-content>
-       <p>This code must be plased into your <b>&lt;header&gt;</b> tag 
+       <!-- <p>This code must be plased into your <b>&lt;header&gt;</b> tag 
        </p>
      <mat-form-field  appearance="fill" class="text-input copy-field">
        <mat-label>css styles </mat-label>
@@ -15,7 +15,7 @@
          matSuffix>
          <mat-icon>link</mat-icon>
        </button>
-     </mat-form-field>
+     </mat-form-field> -->
       <p>This code must be plased into your body, right after the <b>&lt;body&gt;</b> tag, 
       </p>
      <mat-form-field appearance="fill" class="text-input copy-field">
