test fixes, ui fixes, resources fixes

--- a/frontend/src/app/layouts/agent-layout/chat/chat.component.html
+++ b/frontend/src/app/layouts/agent-layout/chat/chat.component.html
@@ -46,7 +46,7 @@
       </div>
     </mat-card>
     <mat-card class="message-box">
-      <mat-form-field appearance="fill" class="input-box">
+      <mat-form-field appearance="outline" class="input-box">
         <mat-label>Message</mat-label>
         <input matInput #messageText>
       </mat-form-field>
