adding statistics and implementing api

--- a/frontend/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/frontend/src/app/layouts/admin-layout/admin-layout.component.html
@@ -9,6 +9,9 @@
     <nav mat-tab-nav-bar 
     class="d-flex"
     backgroundColor="primary">
+     <a mat-tab-link routerLink="/admin/statistics">
+      statistics
+     </a>
       <a mat-tab-link 
       routerLink="/admin/chats-history">
        chats-history
